# vicreg-loss

./: .gitignore  README.md  main.py  pyproject.toml
configs/: normal.yaml
src/: __init__.py  dataset.py  model.py  test_vicreg.py  trainer.py  vicreg.py  vicreg_l.py  vicregl.py
