[project]
name = "vicreg-loss"
version = "0.1.0"
description = "Non-official implementation of the VICReg and VICRegL losses."
authors = [
    {name = "JoliBrain", email = "contact@jolibrain.com"},
]
dependencies = [
    "torch>=2.0.1",
    "einops>=0.6.1",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
keywords = ["PyTorch", "VICReg", "VICRegL", "Constrastive Learning"]
license = {text = "MIT"}
[project.urls]
Repository = "https://github.com/jolibrain/vicreg-loss"
[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vicreg_loss"]
