[project]
name = "vicreg-loss"
version = "0.1.0"
description = "Non-official implementation of the VICReg and VICRegL losses."
readme = "README.md"
keywords = [
  "Constrastive Learning",
  "PyTorch",
  "VICReg",
  "VICRegL",
]
license = {text = "MIT"}
authors = [
    {name = "JoliBrain", email = "contact@jolibrain.com"},
]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "einops>=0.6.1",
  "torch>=2.0.1",
]
[project.optional-dependencies]
tests = [
  "pytest>=7.3.1",
]
[project.urls]
Repository = "https://github.com/jolibrain/vicreg-loss"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[tool.setuptools]
packages = ["vicreg_loss"]
